--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
 								<p>Created this Personal Sales Dashboard to gain insights on which product and segment is performing well and the company should invest in.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
-								<h3>Additional Project will be added</h3>
-								<p>....</p>
+								<a href="images/Corpdashboard.jpg" class="image fit thumb"><img src="images/Corpdashboard.jpg" alt="" /></a>
+								<h3>GSC CORPORATE DASHBOARD</h3>
+								<p>This dashboard was created to analyze the Hiring Performance for Corporate Roles to improve Hiring Conversion and lessen offer decline rate</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
