--- a/index.html
+++ b/index.html
@@ -57,11 +57,15 @@
 								<p>This dashboard was created to analyze the Hiring Performance for Corporate Roles to improve Hiring Conversion and lessen offer decline rate </p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
-								<h3>Additional Project will be added</h3>
-								<p>....</p>
+								<a href="images/snowdashboard.png" class="image fit thumb"><img src="images/snowdashboard.png" alt="" /></a>
+								<h3>KNOWLEDGE BASE SERVICENOW DASHBOARD</h3>
+								<p>This dashboard provides insights how helpful the knowledge articles to employees and shows the most viewed articles. This provide insights to HR to creat more self help articles for employees</p>
 							</article>
-						
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/snowdashboard2.png" class="image fit thumb"><img src="images/snowdashboard2.png" alt="" /></a>
+								<h3>AMERICAS QUERIES SERVICENOW DASHBOARD</h3>
+								<p>Created this dashboard for Queries Analytics to see and monitor the highest number of concerns/request by employees and monitor the completion of requests</p>
+							</article>						
 						</div>
 						<ul class="actions">
 							<li><a href="#" class="button">Full Portfolio</a></li>
