--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
 								<p>This dashboard was created to analyze the Hiring Performance for Corporate Roles to improve Hiring Conversion and lessen offer decline rate </p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/snowdashboard.png" class="image fit thumb"><img src="images/snowdashboard.png" alt="" /></a>
+								<a href="images/HRdashboard.png" class="image fit thumb"><img src="images/HRdashboard.png" alt="" /></a>
 								<h3>KNOWLEDGE BASE SERVICENOW DASHBOARD</h3>
-								<p>This dashboard provides insights how helpful the knowledge articles to employees and shows the most viewed articles. This provide insights to HR to creat more self help articles for employees</p>
+								<p>This dashboard provides insights how helpful the knowledge articles to employees and shows the most viewed articles. This provide insights to HR to create more self help articles for employees</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/snowdashboard2.png" class="image fit thumb"><img src="images/snowdashboard2.png" alt="" /></a>
